After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683634 - window is not in "full screen"
window is not in "full screen"
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
3.5.x
Other Linux
: Normal minor
: ---
Assigned To: Robert Roth
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-08 18:47 UTC by Robert Roth
Modified: 2012-09-27 19:43 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
Proposed patch (4.19 KB, patch)
2012-09-08 19:39 UTC, Robert Roth
none Details | Review

Description Robert Roth 2012-09-08 18:47:01 UTC
Forwarded from https://bugs.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/1047925, originally reported by Gounlaf 

1- Launch Gnome System Monitor
2- Click on "full screen" button -> It's OK
3- Close Gnome System Monitor
4- Launch again Gnome System Monitor -> The window is not in "full screen" mode.

Visual explication in attachment https://bugs.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/1047925/+attachment/3301505/+files/gnome-system-monitor_fullsceen.png
Comment 1 Robert Roth 2012-09-08 19:39:04 UTC
Created attachment 223820 [details] [review]
Proposed patch

The patch saves the main window maximized state on exit, and loads it on startup. If the window is maximized when closing, the size and position info is not stored, as the best would be to have the last data, to be able to unmaximize the window to that size.
Comment 2 Robert Roth 2012-09-27 19:43:39 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.