Save the main window maximized state in gsettings on exit  and load it on startup.  https://bugzilla.gnome.org/show_bug.cgi?id=683634