src/procman.cpp
@@ -268,6 +268,7 @@ procman_data_new (GSettings *settings)
 
     pd->config.width = g_settings_get_int (settings, "width");
     pd->config.height = g_settings_get_int (settings, "height");
+    pd->config.maximized = g_settings_get_boolean(settings, "maximized");
     pd->config.xpos = g_settings_get_int (settings, "x-position");
     pd->config.ypos = g_settings_get_int (settings, "y-position");
 
@@ -523,14 +524,21 @@ procman_save_config (ProcData *data)
     procman_save_tree_state (data->settings, data->tree, "proctree");
     procman_save_tree_state (data->settings, data->disk_list, "disktreenew");
 
-    data->config.width  = gdk_window_get_width (gtk_widget_get_window (data->app));
-    data->config.height = gdk_window_get_height(gtk_widget_get_window (data->app));
-    gtk_window_get_position(GTK_WINDOW(data->app), &data->config.xpos, &data->config.ypos);
+    data->config.maximized = gdk_window_get_state(gtk_widget_get_window (data->app)) & GDK_WINDOW_STATE_MAXIMIZED;
 
-    g_settings_set_int (settings, "width", data->config.width);
-    g_settings_set_int (settings, "height", data->config.height);
-    g_settings_set_int (settings, "x-position", data->config.xpos);
-    g_settings_set_int (settings, "y-position", data->config.ypos);
+    if (!data->config.maximized) {
+        // we only want to store/overwrite size and position info with non-maximized state info
+        data->config.width  = gdk_window_get_width (gtk_widget_get_window (data->app));
+        data->config.height = gdk_window_get_height(gtk_widget_get_window (data->app));
+
+        gtk_window_get_position(GTK_WINDOW(data->app), &data->config.xpos, &data->config.ypos);
+
+        g_settings_set_int (settings, "width", data->config.width);
+        g_settings_set_int (settings, "height", data->config.height);
+        g_settings_set_int (settings, "x-position", data->config.xpos);
+        g_settings_set_int (settings, "y-position", data->config.ypos);
+    }
+    g_settings_set_boolean (settings, "maximized", data->config.maximized);
 
     g_settings_set_int (settings, "current-tab", data->config.current_tab);
 
